--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="row">
       <div class="features col-lg-4">
         <i class="fas fa-check-circle features-icon"></i>
-        <h3  class="features-title">Easy to use.</h3>
+        <h3 class="features-title">Easy to use.</h3>
         <p class="features-p">So easy to use, even your dog could do it.</p>
       </div>
 
@@ -85,7 +85,7 @@
       <div class="features col-lg-4">
         <i class="fas fa-heart features-icon"></i>
         <h3 class="features-title">Guaranteed to work.</h3>
-        <p class="features-p">Find the love of your dog's life or your money back.</p>
+        <p class="features-p">Find the best dog's or your money back.</p>
       </div>
     </div>
   </section>
@@ -94,14 +94,34 @@
   <!-- Testimonials -->
 
   <section id="testimonials">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h2>Woof Woof.I had no friends but found one Thanks to TinDog. Woof Woof !!</h2>
+          <img src="images/dog-img.jpg" alt="dog-profile" class="testimonial-image">
+          <em>Pebbles, New York</em>
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
+        </div>
+        <div class="carousel-item">
+          <h2 class="testimonial-text">I used to be Lonely, but with TinDog's help, I have found the most Faithful
+            Friend</h2>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Beverly, Illinois</em>
+        </div>
 
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+
+
+
 
   </section>
 
@@ -109,10 +129,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
@@ -122,32 +142,64 @@
   <section id="pricing">
 
     <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <p>Simple and affordable price plans for your dog.</p>
+    <div class="row">
+
+      <div class="pricing-column  col-lg-4 col-md-6">
+        <div class=" card ">
+          <div class="card-header">
+            <h3>Chihuahua</h3>
+          </div>
+          <div class="card-body">
+            <h2>$25</h2>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <button type="button" class="btn-outline-dark  btn-lg btn-block">Sign Up</button>
+          </div>
+        </div>
+      </div>
 
 
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+      <div class="pricing-column  col-lg-4 col-md-6">
+        <div class=" card ">
+          <div class="card-header">
+            <h3>Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2>$49</h2>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <button type="button" class="btn-dark  btn-lg btn-block">Sign Up</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="pricing-column  col-lg-4">
+        <div class=" card ">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2>$99 </h2>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <button type="button" class="btn-dark  btn-lg btn-block">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
 
 
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+
+
+
+
+
 
   </section>
 
@@ -156,7 +208,7 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <h3>Find The Best Dogs</h3>
     <button type="button">Download</button>
     <button type="button">Download</button>
 
