--- a/index.html
+++ b/index.html
@@ -2,226 +2,236 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>TinDog</title>
+    <meta charset="utf-8">
+    <title>TinDog</title>
 
-  <!-- CSS  -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
-  <!-- Google Fonts  -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;900&family=Ubuntu&display=swap"
-    rel="stylesheet">
-  <!-- Font Awesome -->
-  <script src="https://kit.fontawesome.com/59f3dd12d8.js" crossorigin="anonymous"></script>
-  <!-- BootStrap  Scipts-->
+    <!-- CSS  -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- Google Fonts  -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;900&family=Ubuntu&display=swap"
+        rel="stylesheet">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/59f3dd12d8.js" crossorigin="anonymous"></script>
+    <!-- BootStrap  Scipts-->
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-  <section id="title">
-    <div class="container-fluid">
+    <section id="title">
+        <div class="container-fluid">
 
 
-      <!-- Nav Bar -->
-      <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="">tindog</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link  " href="">Contact</a></li>
-            <li class="nav-item"><a class="nav-link  " href="">Pricing</a></li>
-            <li class="nav-item"><a class="nav-link " href="">Download</a></li>
-          </ul>
+            <!-- Nav Bar -->
+            <nav class="navbar navbar-expand-lg navbar-dark">
+                <a class="navbar-brand" href="">tindog</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item"><a class="nav-link  " href="">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link  " href="">Pricing</a></li>
+                        <li class="nav-item"><a class="nav-link " href="">Download</a></li>
+                    </ul>
+                </div>
+            </nav>
+
+
+
+            <!-- Title -->
+            <div class="row">
+
+                <div class="col-lg-6">
+                    <h1>Meet new and interesting dogs nearby.</h1>
+                    <button type="button" class="btn btn-dark btn-lg  download-btn"><i class="fab fa-apple"></i>
+                        Download</button>
+                    <button type="button" class="btn btn-outline-light btn-lg  download-btn"><i
+                            class="fab fa-google-play"></i>
+                        Download</button>
+                </div>
+                <div class="col-lg-6">
+                    <img src="images/iphone6.png" alt="iphone-mockup" id="titile-img">
+                </div>
+            </div>
         </div>
-      </nav>
+    </section>
+
+
+    <!-- Features -->
+
+    <section id="features">
+        <div class="row">
+            <div class="features col-lg-4">
+                <i class="fas fa-check-circle features-icon"></i>
+                <h3 class="features-title">Easy to use.</h3>
+                <p class="features-p">So easy to use, even your dog could do it.</p>
+            </div>
+
+
+            <div class="features col-lg-4">
+                <i class="fas fa-bullseye features-icon"></i>
+                <h3 class="features-title">Elite Clientele</h3>
+                <p class="features-p">We have all the dogs, the greatest dogs.</p>
+            </div>
+
+            <div class="features col-lg-4">
+                <i class="fas fa-heart features-icon"></i>
+                <h3 class="features-title">Guaranteed to work.</h3>
+                <p class="features-p">Find the best dog's or your money back.</p>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Testimonials -->
+
+    <section id="testimonials">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <h2>Woof Woof.I had no friends but found one Thanks to TinDog. Woof Woof !!</h2>
+                    <img src="images/dog-img.jpg" alt="dog-profile" class="testimonial-image">
+                    <em>Pebbles, New York</em>
+
+                </div>
+                <div class="carousel-item">
+                    <h2 class="testimonial-text">I used to be Lonely, but with TinDog's help, I have found the most
+                        Faithful Friend
+                    </h2>
+                    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+                    <em>Beverly, Illinois</em>
+                </div>
+
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
 
 
 
-      <!-- Title -->
-      <div class="row">
 
-        <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
-          <button type="button" class="btn btn-dark btn-lg  download-btn"><i class="fab fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg  download-btn"><i class="fab fa-google-play"></i>
+    </section>
+
+
+    <!-- Press -->
+
+    <section id="press">
+        <img class="press-logo"
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b9/TechCrunch_logo.svg/245px-TechCrunch_logo.svg.png"
+            alt="tc-logo">
+        <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+        <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+        <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+
+    </section>
+
+
+    <!-- Pricing -->
+
+    <section id="pricing">
+
+        <h2>A Plan for Every Dog's Needs</h2>
+        <p>Simple and affordable price plans for your dog.</p>
+        <div class="row">
+
+            <div class="pricing-column  col-lg-4 col-md-6">
+                <div class=" card ">
+                    <div class="card-header">
+                        <h3>Chihuahua</h3>
+                    </div>
+                    <div class="card-body">
+                        <h2>$25</h2>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <button type="button" class="btn-outline-dark  btn-lg btn-block">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="pricing-column  col-lg-4 col-md-6">
+                <div class=" card ">
+                    <div class="card-header">
+                        <h3>Labrador</h3>
+                    </div>
+                    <div class="card-body">
+                        <h2>$49</h2>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <button type="button" class="btn-dark  btn-lg btn-block">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="pricing-column  col-lg-4">
+                <div class=" card ">
+                    <div class="card-header">
+                        <h3>Mastiff</h3>
+                    </div>
+                    <div class="card-body">
+                        <h2>$99 </h2>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <button type="button" class="btn-dark  btn-lg btn-block">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+    </section>
+
+
+    <!-- Call to Action -->
+
+    <section id="cta">
+
+        <h3 class="cta-heading">Find The Best Dogs</h3>
+        <button type="button" class="btn btn-dark btn-lg  download-btn"><i class="fab fa-apple"></i> Download</button>
+        <button type="button" class="btn btn-outline-light btn-lg  download-btn"><i class="fab fa-google-play"></i>
             Download</button>
-        </div>
-        <div class="col-lg-6">
-          <img src="images/iphone6.png" alt="iphone-mockup" id="titile-img">
-        </div>
-      </div>
-    </div>
-  </section>
+
+    </section>
 
 
-  <!-- Features -->
+    <!-- Footer -->
 
-  <section id="features">
-    <div class="row">
-      <div class="features col-lg-4">
-        <i class="fas fa-check-circle features-icon"></i>
-        <h3 class="features-title">Easy to use.</h3>
-        <p class="features-p">So easy to use, even your dog could do it.</p>
-      </div>
+    <footer id="footer">
+        <a href="https://www.twitter.com" target="_blank"><i class=" footer-icon fab fa-twitter "></i></a>
+        <a href="https://www.facebook.com" target="_blank"><i class=" footer-icon fab fa-facebook"></i></a></i>
+        <a href="https://www.instagram.com" target="_blank"><i class=" footer-icon fab fa-instagram"></i></a>
+        <a href="https://www.gmail.com" target="_blank"><i class=" footer-icon fas fa-envelope"></i></a>
+        <p class="footer-p">© Copyright 2018 TinDog</p>
 
-
-      <div class="features col-lg-4">
-        <i class="fas fa-bullseye features-icon"></i>
-        <h3 class="features-title">Elite Clientele</h3>
-        <p class="features-p">We have all the dogs, the greatest dogs.</p>
-      </div>
-
-      <div class="features col-lg-4">
-        <i class="fas fa-heart features-icon"></i>
-        <h3 class="features-title">Guaranteed to work.</h3>
-        <p class="features-p">Find the best dog's or your money back.</p>
-      </div>
-    </div>
-  </section>
-
-
-  <!-- Testimonials -->
-
-  <section id="testimonials">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <h2>Woof Woof.I had no friends but found one Thanks to TinDog. Woof Woof !!</h2>
-          <img src="images/dog-img.jpg" alt="dog-profile" class="testimonial-image">
-          <em>Pebbles, New York</em>
-
-        </div>
-        <div class="carousel-item">
-          <h2 class="testimonial-text">I used to be Lonely, but with TinDog's help, I have found the most Faithful
-            Friend</h2>
-          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-          <em>Beverly, Illinois</em>
-        </div>
-
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
-
-
-
-  </section>
-
-
-  <!-- Press -->
-
-  <section id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
-    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
-
-  </section>
-
-
-  <!-- Pricing -->
-
-  <section id="pricing">
-
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your dog.</p>
-    <div class="row">
-
-      <div class="pricing-column  col-lg-4 col-md-6">
-        <div class=" card ">
-          <div class="card-header">
-            <h3>Chihuahua</h3>
-          </div>
-          <div class="card-body">
-            <h2>$25</h2>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-            <button type="button" class="btn-outline-dark  btn-lg btn-block">Sign Up</button>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="pricing-column  col-lg-4 col-md-6">
-        <div class=" card ">
-          <div class="card-header">
-            <h3>Labrador</h3>
-          </div>
-          <div class="card-body">
-            <h2>$49</h2>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-            <button type="button" class="btn-dark  btn-lg btn-block">Sign Up</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="pricing-column  col-lg-4">
-        <div class=" card ">
-          <div class="card-header">
-            <h3>Mastiff</h3>
-          </div>
-          <div class="card-body">
-            <h2>$99 </h2>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-            <button type="button" class="btn-dark  btn-lg btn-block">Sign Up</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-
-
-
-
-
-
-
-
-  </section>
-
-
-  <!-- Call to Action -->
-
-  <section id="cta">
-
-    <h3>Find The Best Dogs</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-
-  </section>
-
-
-  <!-- Footer -->
-
-  <footer id="footer">
-
-    <p>© Copyright 2018 TinDog</p>
-
-  </footer>
+    </footer>
 
 
 </body>
