--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon pink"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link  " href="">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link  " href="">Pricing</a></li>
-                        <li class="nav-item"><a class="nav-link " href="">Download</a></li>
+                        <li class="nav-item"><a class="nav-link  " href="#features">Features</a></li>
+                        <li class="nav-item"><a class="nav-link  " href="#testimonials">Testimonials</a></li>
+                        <li class="nav-item"><a class="nav-link  " href="#pricing">Pricing</a></li>
+                        <li class="nav-item"><a class="nav-link " href="#cta">Download</a></li>
                     </ul>
                 </div>
             </nav>
@@ -102,7 +103,7 @@
                 <div class="carousel-item active">
                     <h2>Woof Woof.I had no friends but found one Thanks to TinDog. Woof Woof !!</h2>
                     <img src="images/dog-img.jpg" alt="dog-profile" class="testimonial-image">
-                    <em>Pebbles, New York</em>
+                    <em class="testimonials-em">Pebbles, New York</em>
 
                 </div>
                 <div class="carousel-item">
@@ -110,7 +111,7 @@
                         Faithful Friend
                     </h2>
                     <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-                    <em>Beverly, Illinois</em>
+                    <em class="testimonials-em">Beverly, Illinois</em>
                 </div>
 
             </div>
@@ -161,7 +162,7 @@
                         <p>Lorem ipsum dolor sit amet.</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
-                        <button type="button" class="btn-outline-dark  btn-lg btn-block">Sign Up</button>
+                        <button type="button" class="btn-outline-dark  btn-lg btn-block">Buy Now</button>
                     </div>
                 </div>
             </div>
@@ -177,7 +178,7 @@
                         <p>Lorem ipsum dolor sit amet.</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
-                        <button type="button" class="btn-dark  btn-lg btn-block">Sign Up</button>
+                        <button type="button" class="btn-outline-dark  btn-lg btn-block">Buy Now</button>
                     </div>
                 </div>
             </div>
@@ -192,7 +193,7 @@
                         <p>Lorem ipsum dolor sit amet.</p>
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
                         <p>Lorem ipsum dolor sit amet consectetur.</p>
-                        <button type="button" class="btn-dark  btn-lg btn-block">Sign Up</button>
+                        <button type="button" class="btn-outline-dark  btn-lg btn-block">Buy Now</button>
                     </div>
                 </div>
             </div>
